tests/paczka1/small_fuzzy/12254865.err
Error in line 5: agYB A934 94,2
Error in line 7: agYB S115 76,6
